--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/styled-components": "^4.4.2",
+    "apollo-boost": "^0.4.7",
+    "graphql": "^14.6.0",
     "react": "^16.12.0",
+    "react-apollo": "^3.1.3",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.1",
     "styled-components": "^5.0.1",
