--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/styled-components": "^4.4.2",
     "apollo-boost": "^0.4.7",
     "apollo-link-ws": "^1.0.19",
+    "dotenv": "^8.2.0",
     "graphql": "^14.6.0",
     "react": "^16.12.0",
     "react-apollo": "^3.1.3",
