--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react",
+    "typeRoots": ["./src/typings", "./node_modules/@types"]
   },
   "include": ["src"]
 }
